0.14.10
	bugfix: avoid hitting GET limit on object and rack update
	bugfix: sticker reset icon did not work sometimes
	bugfix: don't fail rendering an empty rack row
	bugfix: rack operations were broken in 0.14.9
	new feature: LDAP authentication
	new feature: borrow URL detection from Mantis BTS (suggested by Joakim Kasimir)
	new feature: Live PTR tab for DNS sync
	new feature: rack population threshold for rackspace allocation
0.14.9 2008-01-30
	bugfix: upgrade to 0.14.8 broke IPv4 prefix creation
	bugfix: more DB cleanups
	bugfix: SNMP didn't work properly for C4948 ports
	bugfix: rowspan attribute was computed incorrectly sometimes
	bugfix: protect referenced dictionary records from deletion
	bugfix: config reset was wrong for default port type
	bugfix: fixed incorrect string escaping caused by PHP magic_quotes 
	update: Live VLANs color legend now distinguishes between 1 and 0
		MAC addresses on a port
	update: fixed tabindex in NATv4 rules form
	update: better dictionary editor layout
	update: get FQDN over SNMP
	update: accept one more multiport format
	update: help pages have been removed
	new feature: more information for rack view
	new feature: rack thumbnails caching
	new feature: rackspace and IPv4 subnets utilization indicator
	new feature: IPv4 and NATv4 tabs are now context-dependent
	new feature: initial SLB management, keepalived support
0.14.8 2007-12-22
	bugfix: adjusted hardcoded values in VLAN trigger
	bugfix: adjusted HW, SW and port types in SNMP data collector
	bugfix: Cisco connector: tolerate switch ports in suspended state
	bugfix: nameless object in link list could not be clicked
	bugfix: fix SQL tables structure
	bugfix: Live VLANs displayed VLANs missing from switch table improperly
	bugfix: sort auth data by username
	bugfix: NATv4 rules were added incorrectly
	update: corrected some dictionary entries
	update: better layout for Live VLANs tab
	update: better logo
	update: stick with GPL version 2, not any later version