@@ -3,6 +3,7 @@
 	bugfix: sticker reset icon did not work sometimes
 	bugfix: don't fail rendering an empty rack row
 	bugfix: rack operations were broken in 0.14.9
+	bugfix: upgrade script didn't authenticate users properly
 	new feature: LDAP authentication
 	new feature: borrow URL detection from Mantis BTS (suggested by Joakim Kasimir)
 	new feature: Live PTR tab for DNS sync
